[package]
name = "api-cli"
version = "0.1.0"
authors = ["ziko"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["blocking","json"] }
serde = "1.0.103"
serde_derive = "1.0.103"
tui = "0.7"
termion = "1.5"
failure = "0.1"
error-chain = "0.12.1"
rust_decimal = "1.0.3"

[[bin]]
name = "api-cli"
path = "main.rs"
